add: added conversion endpoint
